# cardio_analyzer

./: .env.example  .gitignore  CTG_Analyzer_Project_Presentation.pptx  README.md  alembic.ini  pyproject.toml  requirements-worker.txt  requirements.txt
alembic/: env.py
alembic/versions/: f3d6a2d9a1b0_initial_migration.py
apps/api/: auth.py  deps.py  main.py  settings.py
apps/api/routers/: adapters.py  auth.py  history.py  ingest.py  patients.py  reports.py  stream.py
apps/api/services/: adapters.py  inference.py  storage.py  streaming.py
apps/ui/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/ui/src/: App.tsx  main.tsx
apps/ui/src/api/: api.ts
apps/ui/src/components/: CtgChart.tsx  EventTimeline.tsx  Login.tsx  RiskGauge.tsx
apps/ui/src/contexts/: AuthContext.tsx
apps/ui/src/hooks/: useWebSocket.ts
apps/worker/: tasks.py  worker.py
infra/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker
notebooks/: itelma.py
tests/integration/: test_end_to_end.py  test_ingest_api.py
tests/unit/: test_anomalies.py  test_features.py  test_realtime.py
tools/: create_admin.py  feeder.py
